@@ -81,7 +81,7 @@
     <Compile Include="Deveel.Data\BasePathTest.cs" />
     <Compile Include="Deveel.Data.Diagnostics\LoggerTest.cs" />
     <Compile Include="Deveel.Data\ConfigSourceTest.cs" />
-    <Compile Include="Deveel.Data\PathServiceTest.cs" />
+    <Compile Include="Deveel.Data\RestPathServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
