@@ -1,0 +1,10 @@
+﻿using System;
+
+namespace Deveel.Data.Net {
+	public enum MethodResponseCode {
+		Success,
+		NotFound,
+		UnsupportedFormat,
+		Error
+	}
+}
