@@ -5,7 +5,7 @@ using Deveel.Data.Net;
 namespace Deveel.Data {
 	public interface IPathContext : IDisposable {
 		string PathName { get; }
-
+		
 		NetworkClient Client { get; }
 
 
