@@ -1,4 +1,10 @@
-﻿2010-10-04  Antonello Provenzano  <antonello@deveel.com>
+﻿2010-10-05  Antonello Provenzano  <antonello@deveel.com>
+	* HttpPathService.cs: renamed to RestPathService to
+	better describe its mimics.
+	* TcpPathService.cs: renamed to BinaryPathService to
+	better describe its mimics.
+	
+2010-10-04  Antonello Provenzano  <antonello@deveel.com>
 
 	* AdminService.cs: promoted the network configuration
 	from TcpAdminService to make it generalized.
